# photomanage

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Flickr-exclusions.csv  Flickr-exif.csv  Flickr-output.csv  GPhotos-exclusions.csv  GPhotos-exif.csv  GPhotos-json.csv  Movie-files-exif.csv  Movies-exif.csv  Pipfile  README.md  database-schema-analysis.md  find_media_GPhotos.sh  find_media_folders.sh  find_media_photolibrary.sh  getExifData.sh  getExifData2.sh  mlx-vlm.cli  pyproject.toml  pyrightconfig.json  rename.sh  sourcefile-consistency-analysis.md
.claude/: PLAN.md  instructions.md
chats/: pipenv-sqlite-extensions-troubleshooting.md
database/: datasette.yaml  metadata.json  metadata2.json
datasette/: datasette.yaml  media_config.yaml
docs/: batch-processing-guide.md  batch-processing-performance.md  clamshell-throttling-note.md  config-table-migration.md  database-indexes.md  database-schema-analysis.md  embedding-search.md  mac-studio-pipeline-planning.md  media-gathering-tools.md  mlx-vlm-usage.md  sourcefile-consistency-analysis.md  truncated-descriptions-analysis.md  uv-usage.md
exifs/: Flickr-exif.csv  Flickr-exifoutput.csv  GPhotos-exif.csv  GPhotos-exifoutput.csv  Movie-files-exif.csv  Movie-files-exifoutput.csv  Movies-exif.csv  Movies-exifoutput.csv
html/: index.html
mlx/: 078ef57f-5196-433d-adf4-a77afbbe9d74.NEF  mlx-vlm.cli
notes/: create-duptime-table
outputs/: GPhotos-output.csv  Movie-files-exclusions.csv  Movie-files-output.csv  Movies-exclusions.csv  Movies-output.csv  example.json  image_analysis_20250202_163500.json  image_analysis_20250202_165436.json  image_analysis_20250202_171229.json  image_analysis_20250202_201137.json  image_analysis_20250203_195140.json  image_analysis_20250208_141055.json  image_analysis_20250209_062548.json
python/: GIS_api.py  Pipfile  appSettings.py  readExif.py
scripts/: analyze_processing_times.py  analyze_sharpness_vs_camera.py  convert_col_date.sh  copy_dir.sh  cp-from-disk.sh  create_preview.sh  create_thumbnails.sh  create_thumbsNEF.sh  create_thumbs_oriented.sh  file_extensions.sh  find_media_fcpbundle.sh  find_media_folders.sh  find_media_photolibrary.sh  find_missing_descriptions.py  find_truncated_descriptions.py  generate_sharpness_viewer.py  get-basename.sh  get-json.sh  getAllExif.sh  getExifData.sh  getExifData2.sh  getFoldersExif.sh  getImageDimensions.sh  getMoreExif.sh  get_camera_exif.sh  getjpg.sh  import_camera_exif.py  import_image_descriptions.py  import_sharpness_scores.py  laplacian_sharpness.py  list_files.sh  load_thumbnails_to_db.py  loadmap.sh  move_uuid_dest.sh  move_uuid_files.sh  non-null.sh  prep_dir.sh  process_list.sh  remove_apple_double.sh  rename.sh  (+6 more)
src/: SmolVLM.py  SmolVLMExample.py  SmolVLMExampleAlpa.py  anthropicHello.py  b2-file.py  (+48 more)
(+26383 files in other folders)
