[project]
name = "photomanage"
version = "0.1.0"
description = "Photo management system with Datasette"
requires-python = ">=3.12.5,<3.13"
dependencies = [
    "anthropic",
    "click",
    "b2",
    "black",
    "datasette==1.0a24",
    "datasette-auth-passwords",
    "datasette-checkbox",
    "datasette-media",
    "datasette-render-images",
    "datasette-template-sql>=1.0.2",
    "datasets",
    "fastapi",
    "huggingface-hub",
    "mlx",
    "mlx-lm",
    "mlx-vlm",
    "num2words",
    "numpy",
    "openai",
    "opencv-python",
    "pandas",
    "pillow",
    "psutil",
    "pyheif",
    "python-dotenv",
    "rawpy",
    "requests",
    "safetensors",
    "sentence-transformers",
    "sqlite-utils",
    "torch",
    "torchvision",
    "transformers",
    "uvicorn",
    "pydantic>=2.12.5",
]

[tool.hatch.build]
include = ["src/**"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pyright>=1.1.408",
    "ruff>=0.15.6",
]
